Content Setting Bubbles: fix the manage link for midi

Bug: 759173
Change-Id: If7d062a7cdafa7deeb36044381466820e580d842
Reviewed-on: https://chromium-review.googlesource.com/636314
Reviewed-by: Tommy Li <tommycli@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497550}
Former-commit-id: fbf005d557d8f06152eb8b46869434ed871533f4